# source-wand

./: .gitignore  404.html  ANDREW.md  Cargo.toml  README.md  index.html  log.logs  mkdocs.yaml  replication.yaml  replication_plan.txt  snapcraft.yaml  source-wand.code-workspace
1-elts-requirements-gathering/: Cargo.toml
2-elts-engagement-scoping/: Cargo.toml
3-elts-dependency-analysis/: Cargo.toml
4-elts-project-replication/: Cargo.toml
5-elts-pipeline-management/: Cargo.toml
add-on-api/: Cargo.toml
add-ons/sourcecraft/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: apply.rs  apply_manual.rs  compare.rs  dependencies.rs  deptree.rs  init.rs  mirror_dependencies.rs  mod.rs  onboard.rs  plan.rs  replication.rs
cli/src/commands/replicate/: apply.rs  init.rs  mod.rs  plan.rs
cli/src/commands/replication/: apply.rs  init.rs  mod.rs  plan.rs
cli/src/utils/: mod.rs
common/: Cargo.toml
common/src/: lib.rs  project.rs
common/src/dependency_ensurer/: go.rs  java_maven.rs  mod.rs  python_pip.rs  python_pipgrip.rs  required_dependency.rs  rust_cargo.rs
common/src/identity/: mod.rs  sanitized_name.rs  semantic_version.rs
common/src/project_manipulator/: local_project_manipulator.rs  lxd_project_manipulator.rs  mod.rs  project_manipulator.rs
common/src/utils/: mod.rs  read_yaml_file.rs  write_text_file.rs  write_yaml_file.rs
concurrent-executor/: Cargo.toml
concurrent-executor/src/: context.rs  execution_graph_builder.rs  execution_status_tracker.rs  executor.rs  lib.rs  transformation.rs  transformation_node.rs
dependency-analysis/: Cargo.toml
dependency-analysis/src/: dependency_tree_map.rs  dependency_tree_node.rs  dependency_tree_request.rs  lib.rs  unique_dependencies_list.rs
dependency-analysis/src/build_requirements_generator/: go_build_requirements_generator.rs  mod.rs
dependency-analysis/src/build_systems/: build_system_identity.rs  identifier.rs  mod.rs
dependency-analysis/src/dependency_tree_generators/: cdxgen_dependency_tree_generator.rs  cdxgen_go_dependency_tree_generator.rs  cdxgen_java_dependency_tree_generator.rs  cdxgen_python_dependency_tree_generator.rs  cdxgen_rust_dependency_tree_generator.rs  dependency_tree_graph.rs  go_dependency_tree_generator.rs  go_dependency_tree_generator_andrew.rs  go_dependency_tree_generator_deep_replication.rs  go_depenendency_tree_struct.rs  java_maven_dependency_tree_generator.rs  mod.rs  python_pip_dependency_tree_generator.rs  rust_cargo_dependency_tree_generator.rs
dependency-tree/: Cargo.toml
dependency-tree/src/: dependency_tree.rs  lib.rs
docs/: index.md  supported-languages.md
docs/stylesheets/: ubuntu-colors.css
docs/tutorials/: 0-all.md  1-installing-source-wand.md  2-analyzing-dependencies.md  3-replicating-a-project.md
elts-cli/: Cargo.toml
elts-common/: Cargo.toml
elts-dependency-analysis/: Cargo.toml
elts-engagement-scoping/: Cargo.toml
elts-pipeline-management/: Cargo.toml
elts-project-replication/: Cargo.toml
elts-requirements-gathering/: Cargo.toml
engagement-scoping/: Cargo.toml
explanations/all/: index.html
how-to-guides/all/: index.html
onboarding/: Cargo.toml
onboarding/src/: plan.rs
onboarding/src/plan/: fetch_source.rs  mod.rs  onboarding_plan.rs  onboarding_source.rs  plan_onboarding.rs
pipeline-management/: Cargo.toml
project-replication/: Cargo.toml
references/all/: index.html
replication/: Cargo.toml
replication/src/: lib.rs
replication/src/apply/: mod.rs  plan_executor.rs  plan_to_execution_graph.rs
replication/src/model/: dependency.rs  hooks.rs  mod.rs  package.rs  package_destination.rs  package_destination_git.rs  package_origin.rs  package_origin_git.rs  package_origin_go_cache.rs  replication.rs  replication_config.rs  replication_manifest.rs  replication_plan.rs  replication_project.rs
replication/src/model/sourcecraft/: go_part.rs  go_use_part.rs  mod.rs  nil_part.rs  part.rs  sourcecraft_metadata.rs
replication/src/plan/: environment.rs  execution_graph_builder.rs  fetch_source.rs  mod.rs  plan_replication.rs  planner.rs  transformation.rs  transformation_node.rs
replication/src/plan/transformations/: initialize_project.rs  mod.rs
replication/src/plan/transformations/git/: git_init.rs  git_push.rs  mod.rs
replication/src/plan/transformations/golang/: fetch_source.rs  mod.rs
replication/src/plan/transformations/sourcecraft/: initialize.rs
requirements-gathering/: Cargo.toml
search/: search_index.json
supported-languages/: index.html
tutorials/0-all/: index.html
tutorials/1-installing-source-wand/: index.html
tutorials/2-analyzing-dependencies/: index.html
tutorials/3-replicating-a-project/: index.html
tutorials/all/: index.html
