[package]
name = "source-wand"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.27", features = ["derive"] }
colorize = "0.1.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
uuid = { version = "1.17.0", features = ["v4"] }

source-wand-replication = { path = "../replication" }
source-wand-dependency-analysis = { path = "../dependency-analysis" }
source-wand-concurrent-executor = { path = "../concurrent-executor" }
source-wand-common = { path = "../common" }
