[package]
name = "source-wand-dependency-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
lxd = "0.1.9"
ptree = "0.5.2"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
uuid = { version = "1.13.1", features = ["v4"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"

source-wand-common = { path = "../common" }
source-wand-dependency-tree = { path = "../dependency-tree" }
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
