[package]
name = "elts"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.elts-common]
path = "../elts-common"

[dependencies.elts-requirements-gathering]
path = "../elts-requirements-gathering"

[dependencies.elts-engagement-scoping]
path = "../elts-engagement-scoping"

[dependencies.elts-dependency-analysis]
path = "../elts-dependency-analysis"

[dependencies.elts-project-replication]
path = "../elts-project-replication"

[dependencies.elts-pipeline-management]
path = "../elts-pipeline-management"
