[package]
name = "source-wand-onboarding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"

source-wand-dependency-analysis = { path = "../dependency-analysis" }
source-wand-common = { path = "../common" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
colorize = "0.1.0"
