[package]
name = "source-wand-replication"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
colorize = "0.1.0"
rayon = "1.11.0"
readonly = "0.2.13"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v4"] }

source-wand-concurrent-executor = { path = "../concurrent-executor" }
source-wand-common = { path = "../common" }
